[gd_scene load_steps=14 format=2]

[ext_resource path="res://mob.gd" type="Script" id=1]
[ext_resource path="res://Assets/Guy/5.png" type="Texture" id=2]
[ext_resource path="res://Assets/Guy/0.png" type="Texture" id=3]
[ext_resource path="res://Assets/Guy/1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Guy/2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Guy/4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Guy/3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sweat/0.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sweat/1.png" type="Texture" id=9]
[ext_resource path="res://Assets/death-sound.wav" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 13.2278, 32 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "Run",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]
_sections_unfolded = [ "Resource" ]

[node name="Mob" type="KinematicBody2D" index="0" groups=[
"Mobs",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Collision" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="Sprite" type="AnimatedSprite" parent="." index="1"]

modulate = Color( 0.0664063, 1, 0.868713, 1 )
position = Vector2( 9.53674e-07, 9.53674e-07 )
frames = SubResource( 2 )
animation = "Idle"
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="SunTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="MoveTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Sweat" type="AnimatedSprite" parent="." index="4"]

modulate = Color( 0.0627451, 1, 0.866667, 1 )
frames = SubResource( 3 )
animation = "default"
playing = true

[node name="AudioDeath" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 10 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="mob_death" from="." to="." method="_on_Mob_mob_death"]

[connection signal="timeout" from="SunTimer" to="." method="_on_SunTimer_timeout"]

[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]


